tests/sylt_std/as_char_faulty.sy
from std use as_char

start :: fn do
    as_char(0)
end
// error: $Mismatch { .. }
